--- a/Hospital.EntityFramework/Hospital.EntityFramework.csproj
+++ b/Hospital.EntityFramework/Hospital.EntityFramework.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20201118042025_init1.cs" />
+    <Compile Remove="Migrations\20201118042025_init1.Designer.cs" />
+    <Compile Remove="Migrations\20201118044914_init3.cs" />
+    <Compile Remove="Migrations\20201118044914_init3.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.9">
       <PrivateAssets>all</PrivateAssets>
