--- a/Hospital.Console/Hospital.Console.csproj
+++ b/Hospital.Console/Hospital.Console.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Hospital.Domain\Hospital.Domain.csproj" />
+    <ProjectReference Include="..\Hospital.EntityFramework\Hospital.EntityFramework.csproj" />
   </ItemGroup>
 
 </Project>
