--- a/Hospital.UI/Hospital.UI.csproj
+++ b/Hospital.UI/Hospital.UI.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MahApps.Metro" Version="2.3.4" />
+    <PackageReference Include="System.Linq.Async" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
