--- a/Hospital.ViewModel/Hospital.ViewModel.csproj
+++ b/Hospital.ViewModel/Hospital.ViewModel.csproj
@@ -1,21 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UseWPF>true</UseWPF>
   </PropertyGroup>
-
-
-  <ItemGroup>
-    <PackageReference Include="MaterialDesignColors" Version="1.2.7" />
-    <PackageReference Include="MaterialDesignThemes" Version="3.2.0" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Hospital.Domain\Hospital.Domain.csproj" />
     <ProjectReference Include="..\Hospital.EntityFramework\Hospital.EntityFramework.csproj" />
   </ItemGroup>
 
- 
 </Project>
