--- a/Hospital.UI/Hospital.UI.csproj
+++ b/Hospital.UI/Hospital.UI.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Hospital.EntityFramework\Hospital.EntityFramework.csproj" />
+    <ProjectReference Include="..\Hospital.ViewModel\Hospital.ViewModel.csproj" />
   </ItemGroup>
 
 </Project>
