WPF Authentication as IPrinciple, authenticat etc

--- a/Hospital.ASP/Properties/launchSettings.json
+++ b/Hospital.ASP/Properties/launchSettings.json
@@ -12,9 +12,12 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
       }
     },
+
+
     "Hospital.ASP": {
       "commandName": "Project",
       "launchBrowser": true,
