--- a/Hospital.ASP/Hospital.ASP.csproj
+++ b/Hospital.ASP/Hospital.ASP.csproj
@@ -7,11 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.9" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Hospital.Domain\Hospital.Domain.csproj" />
+    <ProjectReference Include="..\Hospital.EntityFramework\Hospital.EntityFramework.csproj" />
     <ProjectReference Include="..\Hospital.ViewModel\Hospital.ViewModel.csproj" />
   </ItemGroup>
 
