Medial Card Installation, Diagnostic views & Edit

--- a/Hospital.ASP/Hospital.ASP.csproj
+++ b/Hospital.ASP/Hospital.ASP.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <IsTransformWebConfigDisabled>true</IsTransformWebConfigDisabled>
     <UserSecretsId>f346b92c-80d1-4655-9e73-d519901df661</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
