--- a/Hospital.ASP/Properties/launchSettings.json
+++ b/Hospital.ASP/Properties/launchSettings.json
@@ -14,10 +14,9 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
-      }
+      },
+      "jsWebView2Debugging": false
     },
-
-
     "Hospital.ASP": {
       "commandName": "Project",
       "launchBrowser": true,
