--- a/Hospital.ASP/Properties/launchSettings.json
+++ b/Hospital.ASP/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:49959",
-      "sslPort": 44375
+      "applicationUrl": "http://localhost:50139/",
+      "sslPort": 44397
     }
   },
   "profiles": {
